# box-accounting20

./: COMPREHENSIVE_UI_FIXES.md  README.md  README_DEPLOYMENT.md  SYSTEM_STATUS.md  admin_check_result.txt  app.py  check_admin.py  check_user.py  check_users.py  cookies.txt  create_admin.py  csrf_token.txt  deploy.py  extensions.py  fix_admin_login.py  fix_admin_permissions.py  headers.txt  login_page.html  main.py  models.py  pyproject.toml  rbac_routes.py  rbac_setup.py  replit.md  requirements.txt  routes.py  routes.py.optimized  run.bat  setup.bat  test_headers.txt  test_token.txt  update_static_paths.py
attached_assets/: Pasted---1753009749831_1753009749832.txt  Pasted---1753018693855_1753018693857.txt  Pasted---1753027654129_1753027654138.txt  Pasted---1753216757158_1753216757170.txt  Pasted---1753286581944_1753286581947.txt  Pasted--1--1753246911768_1753246911774.txt  Pasted--Chrome--1753223689688_1753223689696.txt  Pasted--DOCTYPE-html-html-lang-fa-head-meta-charset-UTF-8-title--1752868342148_1752868342150.txt  Pasted--Dashboard--1753027785701_1753027785710.txt  Pasted--Deep-Code-Review-index-html-Accessibility--1752981451203_1752981451207.txt  Pasted--Deployment--1753028163102_1753028163118.txt  Pasted--Document-Language--1753282606908_1753282606910.txt  Pasted--PDF--1752982485395_1752982485397.txt  Pasted--UI--1753012141953_1753012141955.txt  Pasted--box-accounting20--1753220982573_1753220982577.txt  Pasted--box-accounting20-2024-06-20--1753221029553_1753221029554.txt  Pasted--select--1752992603475_1752992603477.txt  (+3 more)
instance/: accounting.db
static/: sw.js  (+1 more)
(+113 files in other folders)
